test/cases/structs/function_passing/incomplete.c
// RUN: %check -e %s

struct A f() // CHECK: error: incomplete return type
{
}
